Bug Fixes
Fixed UI bugs for modal display priority

Images on pages no longer get clipped

--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,7 @@ h1 {
 .news-card-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     display: block;
 }
 
@@ -584,7 +584,7 @@ h1 {
 .news-mini-card-thumb img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     display: block;
 }
 
